--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,13 +3,48 @@ body {
   padding: 0;
 }
 
+
 header {
   width: 100%;
   height: 800px;
   background-color: #7c44f1;
+  display: flex;
+  justify-content: space-between;
+}
+.block_right{
+  
+  width: 70%;
+  padding-top:6%;
+  padding-left: 5%;
 }
 
 .header_title {
   color: #fed0da;
   font-size: 104px;
+}
+
+.header_info{
+  font-size: 34px;
+  color: #fff;
+}
+.block_left{
+  width: 30%;
+  padding-top:15%;
+  position: relative;
+}
+.photo1{
+  position: absolute;
+  right: 0;
+}
+.photo2{
+  position: absolute;
+  bottom: 0%;
+  right: 30%;
+  z-index: 1000;
+}
+
+.header_list{
+  display: flex;
+  width: 95%;
+  justify-content: space-between;
 }
